Fixed 1/1/1970 in date deces + aligned fiches joueur & entraineur

--- a/app/directives/joueur/fiche.less
+++ b/app/directives/joueur/fiche.less
@@ -5,17 +5,10 @@
 	.row-info > div {
 	  
     &:first-child {
-      padding-right: 10px !important;
-      text-align: right;
 
       .g-remark {
         margin-right: 2px;
       }
-    }
-
-    &:last-child {
-      border-left: 3px solid @tableBorder;
-      padding-left: 10px !important;
     }
 
 	}
