--- a/style/style.less
+++ b/style/style.less
@@ -17,7 +17,10 @@
 	background: @alternateBackground;
   border-top: 1px solid @tableBorder;
   border-bottom: 1px solid @tableBorder;
+  padding-top: 3px;
+  padding-bottom: 3px;
   text-align: center;
+
 }
 
 /* Important text */
